test/fail/type-unknown.app
//'something' not defined

application test

define page root() {
  var amount := something;
  showPriceReception(amount)
}
